[package]
name = "hitsuki"
version = "1.0.0"
edition = "2021"
description = "A cutting-edge and efficient Telegram Group Manager bot."
repository = "https://github.com/HitaloM/Hitsuki"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { git = "https://github.com/teloxide/teloxide", features = [
    "macros",
    "cache-me",
    "throttle",
] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
