[tool.poetry]
name = "sophie_bot"
version = "2.3.0"
description = "Sophie is modern and fast Telegram chat manager bot"
authors = ["Yacha <yacha@orangefox.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"
aiogram = "^2.17.1"
redis = "3.5.3"  # TODO: upgrade needed
aioredis = "1.3.1"
motor = "^2.5.1"
dnspython = "^2.1.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1", optional = true}
cryptg = {version = "^0.2.post4", optional = true}
cryptography = {version = "^36.0.1", optional = true}
envparse = "^0.2.0"
aiocron = "^1.8"
APScheduler = "^3.8.1"
requests = "^2.26.0"
ujson = "^5.1.0"
PyYAML = "^6.0"
loguru = "^0.5.3"
sentry-sdk = "^1.5.1"
Babel = "^2.9.1"
captcha = "^0.3"
async-timeout = "^4.0.2"
regex = "^2021.11.10"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.extras]
fast = ["aiohttp", "cryptg", "cryptography"]