[tool.poetry]
name = "hitsuki"
version = "2.3.0"
description = "Hitsuki is a modern and fast Telegram chat mamager bot."
authors = ["Hitalo"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.24.0"
aiogram = "^2.17.1"
redis = "3.5.3"
aioredis = "1.3.1"
motor = "^2.5.1"
dnspython = "^2.1.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1", optional = true}
cryptg = {version = "^0.2.post4", optional = true}
cryptography = {version = "^36.0.1", optional = true}
envparse = "^0.2.0"
aiocron = "^1.8"
APScheduler = "^3.8.1"
requests = "^2.26.0"
PyYAML = "^6.0"
loguru = "^0.5.3"
sentry-sdk = "^1.5.1"
Babel = "^2.9.1"
captcha = "^0.3"
async-timeout = "^4.0.2"
regex = "^2021.11.10"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}
python-rapidjson = "^1.5"
httpx = {version = "^0.21.1", extras = ["http2"]}
python-anilist = "^1.0.5"
meval = "^2.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[tool.poetry.extras]
fast = ["aiohttp", "cryptg", "cryptography"]

[tool.black]
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.vscode
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
